ingress/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: employee

  template:
    metadata:
      labels:
        app: employee

    spec:
      containers:
      - name: employee
        image: nginx
        ports:
        - containerPort: 80
