ingress/hr-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hr-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hr

  template:
    metadata:
      labels:
        app: hr

    spec:
      containers:
      - name: hr
        image: nginx
        ports:
        - containerPort: 80
