ingress/employee-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service

spec:
  selector:
    app: employee

  ports:
  - port: 80
    targetPort: 80
