ingress/hr-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hr-service

spec:
  selector:
    app: hr

  ports:
  - port: 80
    targetPort: 80
