ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: company-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /employee
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 80

      - path: /hr
        pathType: Prefix
        backend:
          service:
            name: hr-service
            port:
              number: 80
